2.39 with level hooks